--- a/resources/js/components/pages/Shop/shop.css
+++ b/resources/js/components/pages/Shop/shop.css
@@ -1,3 +1,10 @@
 .shopzen {
     margin-top: 4rem;
 }
+.author-name{
+    text-transform: capitalize;
+}
+
+.cate-name{
+    text-transform: capitalize;
+}
