--- a/resources/js/components/generals/Footer/footer.css
+++ b/resources/js/components/generals/Footer/footer.css
@@ -1,4 +1,10 @@
-.footer{
+.footer {
     background: rgba(115, 245, 234, 0.712);
+
+    margin-top: 1rem;
     padding: 1rem;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
 }
